Fix d3 svg overflow

--- a/src/css/dgu-drupal.less
+++ b/src/css/dgu-drupal.less
@@ -2431,12 +2431,16 @@ body.page-admin {
   }
 }
 
-.tooltip {
-  display: block;
-  font-size: 12px;
-  line-height: 1.4;
-  opacity: 100;
-  position: absolute;
-  visibility: visible;
-  z-index: 1030;
+div.d3 svg {
+  overflow: visible;
+  .tooltip {
+    display: block;
+    font-size: 12px;
+    line-height: 1.4;
+    opacity: 100;
+    position: absolute;
+    visibility: visible;
+    z-index: 1030;
+  }
 }
+
